test/invalid/baseline/readonly-iterable.txt
Syntax error at line 2, since `interface ReadonlyIterable`:
  readonly iterable<long>
  ^ Missing return type
